--- a/.github/workflows/windows_builds.yml
+++ b/.github/workflows/windows_builds.yml
@@ -10,6 +10,8 @@ on:
 # Global Settings
 # SCONS_CACHE for windows must be set in the build environment
 env:
+  # Used for the cache key. Add version suffix to force clean build.
+  GODEX_BASE_BRANCH: main
   GODOT_REF: ab7cb2a95d060a6533e6ff5111c11f71972ab43f
   SCONSFLAGS: platform=windows verbose=yes warnings=all werror=yes debug_symbols=no module_text_server_fb_enabled=yes
   SCONS_CACHE_MSVC_CONFIG: true
@@ -51,6 +53,12 @@ jobs:
       run: |
         cd godot
         git apply ../modules/godex/patches/add_custom_iterator.patch --reject --ignore-space-change --ignore-whitespace
+
+    - name: Setup Godex build cache
+      uses: ./modules/godex/.github/actions/godex-cache
+      with:
+        cache-name: ${{ matrix.cache-name }}
+      continue-on-error: true
 
     # Upload cache on completion and check it out now
     # Editing this is pretty dangerous for Windows since it can break and needs to be properly tested with a fresh cache.
