--- a/.github/workflows/windows_builds.yml
+++ b/.github/workflows/windows_builds.yml
@@ -38,6 +38,12 @@ jobs:
       uses: actions/checkout@v3
       with:
        path: modules/godex
+       
+    - name: Setup dotnet
+    - uses: actions/checkout@v3
+    - uses: actions/setup-dotnet@v3
+      with:
+       dotnet-version: '6.0.x'
 
     - name: Clone godot for godex
       uses: actions/checkout@v3
