--- a/.github/workflows/windows_builds.yml
+++ b/.github/workflows/windows_builds.yml
@@ -39,12 +39,12 @@ jobs:
       with:
        path: modules/godex
        
-    - name: Setup dotnet
+    - name: Setup Dotnet
     - uses: actions/checkout@v3
     - uses: actions/setup-dotnet@v3
       with:
-       dotnet-version: '6.0.x'
-
+        dotnet-version: '6.0.x'
+      
     - name: Clone godot for godex
       uses: actions/checkout@v3
       with:
